--- a/TinkoffShoolChat/ProfileView.storyboard
+++ b/TinkoffShoolChat/ProfileView.storyboard
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qVT-Rw-Vvv">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,31 +17,45 @@
             <objects>
                 <viewController id="qVT-Rw-Vvv" customClass="ProfileViewController" customModule="TinkoffShoolChat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oFv-nA-Pbt">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UserPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="9HY-Ia-dPF">
-                                <rect key="frame" x="20" y="40" width="335" height="335"/>
+                                <rect key="frame" x="20" y="40" width="280" height="280"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="9HY-Ia-dPF" secondAttribute="height" multiplier="1:1" id="A5m-3c-AFA"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Me9-2t-YOZ">
+                                <rect key="frame" x="216" y="236" width="84" height="84"/>
+                                <color key="backgroundColor" red="0.24705882352941178" green="0.47058823529411764" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Me9-2t-YOZ" secondAttribute="height" multiplier="1:1" id="2eB-fR-Nhp"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="touchUpCameraIcon:" destination="qVT-Rw-Vvv" eventType="touchUpInside" id="mxl-Ez-iPh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="Me9-2t-YOZ" firstAttribute="trailing" secondItem="9HY-Ia-dPF" secondAttribute="trailing" id="05N-5e-rTH"/>
+                            <constraint firstItem="Me9-2t-YOZ" firstAttribute="bottom" secondItem="9HY-Ia-dPF" secondAttribute="bottom" id="9xz-qb-Xw7"/>
                             <constraint firstItem="9HY-Ia-dPF" firstAttribute="leading" secondItem="9wB-FN-yP3" secondAttribute="leading" constant="20" id="EEy-om-Oy6"/>
                             <constraint firstItem="9HY-Ia-dPF" firstAttribute="top" secondItem="9wB-FN-yP3" secondAttribute="top" constant="20" id="I0O-oi-iKl"/>
+                            <constraint firstItem="Me9-2t-YOZ" firstAttribute="width" secondItem="9HY-Ia-dPF" secondAttribute="width" multiplier="0.3" id="eUj-VA-8Yq"/>
                             <constraint firstItem="9wB-FN-yP3" firstAttribute="trailing" secondItem="9HY-Ia-dPF" secondAttribute="trailing" constant="20" id="k5l-9E-mRM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9wB-FN-yP3"/>
                     </view>
                     <connections>
+                        <outlet property="cameraIcon" destination="Me9-2t-YOZ" id="9Mi-Nb-fhw"/>
                         <outlet property="userPlaceholder" destination="9HY-Ia-dPF" id="CnR-dG-PfU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mTr-NE-Az7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-34.399999999999999" y="152.47376311844079"/>
+            <point key="canvasLocation" x="-34.782608695652179" y="152.44565217391306"/>
         </scene>
     </scenes>
     <resources>
