--- a/TinkoffShoolChat/ProfileView.storyboard
+++ b/TinkoffShoolChat/ProfileView.storyboard
@@ -20,18 +20,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UserPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="9HY-Ia-dPF">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UserPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="9HY-Ia-dPF">
                                 <rect key="frame" x="20" y="40" width="280" height="280"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="9HY-Ia-dPF" secondAttribute="height" multiplier="1:1" id="A5m-3c-AFA"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Me9-2t-YOZ">
-                                <rect key="frame" x="216" y="236" width="84" height="84"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alex Zverev" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5om-1a-VLE" userLabel="UserName">
+                                <rect key="frame" x="20" y="336" width="280" height="29"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Love ❤️ iOS Developent, like butterflies and live in Tinkoff Bank" translatesAutoresizingMaskIntoConstraints="NO" id="gkd-Bi-dI5" userLabel="UserInfo">
+                                <rect key="frame" x="20" y="381" width="280" height="101"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Me9-2t-YOZ">
+                                <rect key="frame" x="230" y="250" width="70" height="70"/>
                                 <color key="backgroundColor" red="0.24705882352941178" green="0.47058823529411764" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Me9-2t-YOZ" secondAttribute="height" multiplier="1:1" id="2eB-fR-Nhp"/>
                                 </constraints>
+                                <inset key="imageEdgeInsets" minX="20" minY="20" maxX="20" maxY="20"/>
                                 <state key="normal" image="CameraIcon"/>
                                 <connections>
                                     <action selector="touchUpCameraIcon:" destination="qVT-Rw-Vvv" eventType="touchUpInside" id="mxl-Ez-iPh"/>
@@ -40,7 +54,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tU7-eV-usU">
                                 <rect key="frame" x="20" y="498" width="280" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="f1F-SF-vGZ"/>
+                                    <constraint firstAttribute="height" constant="50" id="f1F-SF-vGZ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="Редактировать">
@@ -60,14 +74,21 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Me9-2t-YOZ" firstAttribute="trailing" secondItem="9HY-Ia-dPF" secondAttribute="trailing" id="05N-5e-rTH"/>
+                            <constraint firstItem="5om-1a-VLE" firstAttribute="leading" secondItem="9HY-Ia-dPF" secondAttribute="leading" id="0r9-iZ-hEq"/>
+                            <constraint firstItem="gkd-Bi-dI5" firstAttribute="top" secondItem="5om-1a-VLE" secondAttribute="bottom" constant="16" id="1fM-0f-ypK"/>
                             <constraint firstItem="tU7-eV-usU" firstAttribute="leading" secondItem="9wB-FN-yP3" secondAttribute="leading" constant="20" id="3jM-H0-8qb"/>
+                            <constraint firstItem="tU7-eV-usU" firstAttribute="top" secondItem="gkd-Bi-dI5" secondAttribute="bottom" constant="16" id="6nG-yJ-1fu"/>
                             <constraint firstItem="Me9-2t-YOZ" firstAttribute="bottom" secondItem="9HY-Ia-dPF" secondAttribute="bottom" id="9xz-qb-Xw7"/>
                             <constraint firstItem="9HY-Ia-dPF" firstAttribute="leading" secondItem="9wB-FN-yP3" secondAttribute="leading" constant="20" id="EEy-om-Oy6"/>
+                            <constraint firstItem="5om-1a-VLE" firstAttribute="top" secondItem="9HY-Ia-dPF" secondAttribute="bottom" constant="16" id="G32-oH-Lcr"/>
                             <constraint firstItem="9HY-Ia-dPF" firstAttribute="top" secondItem="9wB-FN-yP3" secondAttribute="top" constant="20" id="I0O-oi-iKl"/>
+                            <constraint firstItem="gkd-Bi-dI5" firstAttribute="leading" secondItem="9HY-Ia-dPF" secondAttribute="leading" id="SgA-IB-mP3"/>
                             <constraint firstItem="9wB-FN-yP3" firstAttribute="trailing" secondItem="tU7-eV-usU" secondAttribute="trailing" constant="20" id="cNg-ZM-GAE"/>
-                            <constraint firstItem="Me9-2t-YOZ" firstAttribute="width" secondItem="9HY-Ia-dPF" secondAttribute="width" multiplier="0.3" id="eUj-VA-8Yq"/>
+                            <constraint firstItem="Me9-2t-YOZ" firstAttribute="width" secondItem="9HY-Ia-dPF" secondAttribute="width" multiplier="0.25" id="eUj-VA-8Yq"/>
                             <constraint firstItem="9wB-FN-yP3" firstAttribute="bottom" secondItem="tU7-eV-usU" secondAttribute="bottom" constant="20" id="iB0-sO-kZo"/>
                             <constraint firstItem="9wB-FN-yP3" firstAttribute="trailing" secondItem="9HY-Ia-dPF" secondAttribute="trailing" constant="20" id="k5l-9E-mRM"/>
+                            <constraint firstItem="gkd-Bi-dI5" firstAttribute="trailing" secondItem="9HY-Ia-dPF" secondAttribute="trailing" id="lfI-jP-Xpj"/>
+                            <constraint firstItem="5om-1a-VLE" firstAttribute="trailing" secondItem="9HY-Ia-dPF" secondAttribute="trailing" id="m85-mm-4dk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9wB-FN-yP3"/>
                     </view>
@@ -79,7 +100,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mTr-NE-Az7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-34.782608695652179" y="152.44565217391306"/>
+            <point key="canvasLocation" x="-35.625" y="152.11267605633802"/>
         </scene>
     </scenes>
     <resources>
